--- a/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
+++ b/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
@@ -24,7 +24,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-cpu-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="showRegisterForm()">Nuevo Equipo</button>
+        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo Equipo</button>
         <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
           Equipos</button>
       </div>
