--- a/src/app/Components/cirugia/cirugia.component.html
+++ b/src/app/Components/cirugia/cirugia.component.html
@@ -2,25 +2,74 @@
   <h4>PACIENTES SALAS DE CIRUGIA</h4>
 </div>
 
-<div style="width: 96%; margin-left: 2%; margin-top: 2%; align-content: center;">
+<div *ngIf="!vistaPacientes" style="width: 96%; margin-left: 2%; margin-top: 2%; text-align: center;">
+  <button type="button" class="btn btn-dark" (click)="inicierPacientes()">Ver Pacientes</button>
+</div>
 
+<div *ngIf="vistaPacientes" style="width: 98%; margin-left: 1%; margin-top: 1%; align-content: center;">
   <div class="grid-container">
     <div class="grid-item" *ngFor="let paciente of pacientes">
-      <div class="card">
-        <div class="card-body">
-          <h6>{{ paciente.nombre }} {{paciente.primerApellido}} {{paciente.segundoApellido}}</h6>
-          <div *ngIf="paciente.CodigoUbicacion == 'P206'">
-            <button type="button" class="btn btn-primary btn-sm">SALAS DE RECUPERACIÓN</button>
+      <div class="card" style="height: 100%;">
+        <div class="card-body" style="margin: 0;">
+          <div style="height: 40%;">
+            <p style="font-size: 14px;"><strong>{{paciente.datosPaciente.nombre }}
+                {{paciente.datosPaciente.primerApellido}} {{paciente.datosPaciente.segundoApellido}}</strong></p>
           </div>
-          <div *ngIf="paciente.CodigoUbicacion == 'P2CA'">
-            <button type="button" class="btn btn-warning btn-sm">SALAS DE CIRUGIA AMBULATORIA</button>
+          <div style="height: 30%;">
+            <p *ngIf="paciente.datosCirugia && paciente.datosPaciente.CodigoUbicacion != 'P206' && paciente.datosPaciente.CodigoUbicacion != 'P2CA'"
+              style="font-size: 8px;">Cirujano: {{paciente.datosCirugia.Cirujano}}
+              <br>Anestesiologo: {{paciente.datosCirugia.Anestesiologo}}
+            </p>
+            <p *ngIf="paciente.datosPaciente.CodigoUbicacion == 'P206' || paciente.datosPaciente.CodigoUbicacion == 'P2CA'"
+              style="font-size: 8px;">-</p>
+          </div>
+
+          <div style="height: 30%;" *ngIf="paciente.datosPaciente.CodigoUbicacion == 'P206'">
+            <button type="button" class="btn btn-outline-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-person-fill-check" viewBox="0 0 16 16">
+                <path
+                  d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                <path
+                  d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4" />
+              </svg>
+              Recuperación</button>
+          </div>
+          <div style="height: 30%;" *ngIf="paciente.datosPaciente.CodigoUbicacion == 'P2CA'">
+            <button
+              *ngIf="paciente.datosCirugia != null && paciente.datosCirugia.Entrada != null && paciente.datosCirugia.Salida == null"
+              type="button" class="btn btn-outline-warning">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-person-workspace" viewBox="0 0 16 16">
+                <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                <path
+                  d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.4 5.4 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2z" />
+              </svg>
+              Quirofano
+            </button>
+            <button
+              *ngIf="paciente.datosCirugia != null && paciente.datosCirugia.Entrada != null && paciente.datosCirugia.Salida != null"
+              type="button" class="btn btn-outline-info ">Fin Recuperación</button>
+            <button
+              *ngIf="paciente.datosCirugia == null || (paciente.datosCirugia.Entrada == null && paciente.datosCirugia.Salida == null)"
+              type="button" class="btn btn-outline-success">Preparación</button>
+          </div>
+          <div style="height: 30%;"
+            *ngIf="paciente.datosPaciente.CodigoUbicacion == 'QX01' || paciente.datosPaciente.CodigoUbicacion == 'QX02' || paciente.datosPaciente.CodigoUbicacion == 'QX03' || paciente.datosPaciente.CodigoUbicacion == 'QX04' || paciente.datosPaciente.CodigoUbicacion == 'QX05' || paciente.datosPaciente.CodigoUbicacion == 'QX06'">
+            <button type="button" class="btn btn-outline-warning">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-person-workspace" viewBox="0 0 16 16">
+                <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                <path
+                  d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.4 5.4 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2z" />
+              </svg>
+              {{paciente.datosPaciente.nombreUbicacion}}
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
 </div>
 
 <p-dialog [(visible)]="visibleSearch">
