--- a/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
+++ b/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
@@ -10,7 +10,8 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-person-circle" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="showRegisterForm()">Nuevo Usuario</button>
+        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="showRegisterForm()">Nuevo
+          Usuario</button>
         <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
           Usuarios</button>
       </div>
@@ -24,9 +25,40 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-cpu-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo Equipo</button>
+        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo
+          Equipo</button>
         <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
           Equipos</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid-item">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">GESTION DE SERVICIOS</h5>
+        <div style="text-align: center; margin-bottom: 30px;">
+          <i class="bi bi-file-earmark-medical-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
+        </div>
+        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo
+          Servicio</button>
+        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
+          Servicios</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid-item">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">GESTION DE TIPOS DE EQUIPO</h5>
+        <div style="text-align: center; margin-bottom: 30px;">
+          <i class="bi bi-calculator-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
+        </div>
+        <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo
+          tipoEquipo</button>
+        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
+          tiposEquipo</button>
       </div>
     </div>
   </div>
