ajuste para la visualización de protocolos preventivos
ajuste para la visualización de protocolos preventivos

--- a/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
+++ b/src/app/Components/Homepage/homesuperadmin/homesuperadmin.component.html
@@ -42,7 +42,7 @@
         </div>
         <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo
           Servicio</button>
-        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
+        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="viewServicios()">Ver
           Servicios</button>
       </div>
     </div>
@@ -57,7 +57,7 @@
         </div>
         <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="newEquipo()">Nuevo
           tipoEquipo</button>
-        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="showViewUsers()">Ver
+        <button type="button" class="btn btn-outline-success" style="float: right;" (click)="viewTiposEquipo()">Ver
           tiposEquipo</button>
       </div>
     </div>
