modulo actividades metrológicas y mantenimineto
visualización de reportes de actividades metrológicas y ajustes en el modulo de mantenimiento para la visualización de reportes

--- a/src/app/Components/userBiomedica/Reportes/ver-reporte/ver-reporte.component.html
+++ b/src/app/Components/userBiomedica/Reportes/ver-reporte/ver-reporte.component.html
@@ -59,7 +59,7 @@
           <td style="text-align: center;" *ngIf=" reportes.tipoMantenimiento === 'Correctivo' ||  reportes.realizado">
             <button type="button" class="btn btn-dark btn-sm" style="margin: 2%;"
               (click)="viewModalReport(reportes)">Ver</button>
-            <button type="button" class="btn btn-secondary btn-sm" *ngIf="!reportes.rutaPdf">Editar</button>
+            <button type="button" class="btn btn-secondary btn-sm" (click)="editarReporte(reportes.id, reportes.equipoIdFk)" *ngIf="!reportes.rutaPdf">Editar</button>
           </td>
           <td style="text-align: center;" *ngIf="!reportes.realizado && reportes.tipoMantenimiento !== 'Correctivo'">
             <button type="button" class="btn btn-warning btn-sm" (click)="viewModalReport(reportes)">Pendiente</button>
@@ -67,7 +67,7 @@
         </tr>
       </ng-template>
 
-      <!-- Mensaje vacío -->
+
       <ng-template pTemplate="emptymessage">
         <tr>
           <td colspan="10" class="text-center">No hay Registros de Reportes.</td>
