--- a/src/app/Components/userBiomedica/actividades-metrologicas/actividades-metrologicas.component.css
+++ b/src/app/Components/userBiomedica/actividades-metrologicas/actividades-metrologicas.component.css
@@ -1,4 +1,4 @@
-.panelMantenimientos{
+.panelMantenimientos {
 
   width: 95%;
   height: 70%;
@@ -6,7 +6,7 @@
 }
 
 
-.botonesMenu{
+.botonesMenu {
   align-items: center;
   width: 90%;
   margin-left: 5%;
@@ -14,7 +14,7 @@
   align-content: center;
 }
 
-.filtromes{
+.filtromes {
   align-items: center;
   width: 90%;
   margin-left: 5%;
@@ -24,21 +24,32 @@
 
 
 
-    .contenedor {
-      display: flex;
-      width: 100%;
-      height: 200px;
-    }
+.contenedor {
+  display: flex;
+  width: 100%;
+  height: 200px;
+}
 
-    .izquierda {
-      width: 20%;
-      align-items: center;
-      text-align: center;
-    }
+.izquierda {
+  width: 20%;
+  align-items: center;
+  text-align: center;
+}
 
-    .derecha {
-      width: 80%;
-      background-color: #f8d7da;
-      align-items: center;
-      text-align: center;
-    }
+.derecha {
+  width: 80%;
+  background-color: #f8d7da;
+  align-items: center;
+  text-align: center;
+}
+
+.custom-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1rem;
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+}
