--- a/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.html
+++ b/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.html
@@ -114,7 +114,7 @@
               <button type="button" class="btn btn-secondary" *ngIf="reporte.realizado && reporte.rutaPdf == null"
                 (click)="viewModalReport(reporte.id)">REALIZADO</button>
               <button type="button" class="btn btn-success"
-                *ngIf="reporte.realizado && reporte.rutaPdf != null">COMPLETADO</button>
+                *ngIf="reporte.realizado && reporte.rutaPdf != null" (click)="viewModalReport(reporte.id)">COMPLETADO</button>
               <button type="button" class="btn btn-warning" (click)="nuevoReporte(reporte.equipo.id, reporte.id)"
                 *ngIf="!reporte.realizado && verificarVencimiento(reporte.mesProgramado, reporte['añoProgramado'])">PROGRAMADO</button>
               <button type="button" class="btn btn-danger" (click)="nuevoReporte(reporte.equipo.id, reporte.id)"
