--- a/src/app/Components/administracion/admservicios/admservicios.component.html
+++ b/src/app/Components/administracion/admservicios/admservicios.component.html
@@ -1,1 +1,55 @@
-<p>admservicios works!</p>
+<app-superadminnavbar></app-superadminnavbar>
+
+<div style="text-align: center;">
+  <h1>Servicios</h1>
+</div>
+
+<div class="card" style="margin-top: 3%; width: 80%; margin-left: 10%; margin-right: 10%;">
+  <p-table #dt2 [value]="servicios" dataKey="id" [paginator]="true" [rows]="10"
+    [rowsPerPageOptions]="[10, 25, 50, 100]" [loading]="loading" [globalFilterFields]="['nombres']"
+    [tableStyle]="{ 'min-width': '10rem' }">
+
+    <!-- Filtro -->
+    <ng-template #caption>
+      <div class="flex justify-content-end">
+        <p-iconfield iconPosition="left">
+          <p-inputicon>
+            <i class="pi pi-search"></i>
+          </p-inputicon>
+          <input pInputText type="text" (input)="onGlobalFilter($event)" placeholder="Búsqueda" />
+        </p-iconfield>
+      </div>
+    </ng-template>
+
+    <!-- Cabecera -->
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Nombre</th>
+        <th>Ubicacion</th>
+        <th>Opciones</th>
+      </tr>
+    </ng-template>
+
+    <!-- Cuerpo -->
+    <ng-template pTemplate="body" let-servicio>
+      <tr>
+        <td><button type="button" class="btn btn-link" style="color: black;">{{ servicio.nombres }}</button></td>
+        <td>{{ servicio.ubicacion }}</td>
+        <td>
+          <button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></button>
+          <button type="button" class="btn btn-outline-danger" *ngIf="servicio.activo"><i
+              class="bi bi-x-circle" (click)="estadoServicio(servicio.id, 'D')"></i></button>
+          <button type="button" class="btn btn-outline-success" *ngIf="!servicio.activo"><i
+              class="bi bi-check2-circle" (click)="estadoServicio(servicio.id, 'A')"></i></button>
+        </td>
+      </tr>
+    </ng-template>
+
+    <!-- Mensaje vacío -->
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="10" class="text-center">No hay Equipos.</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
